--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,26 @@
-name: Rust Release
+# .github/workflows/build.yml
+name: Build
 
 on:
-  release:
-    types: [created]
+  push:
+    branches: [main]
 
 jobs:
-  release:
-    name: release ${{ matrix.target }}
+  build:
+    name: Build
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        target: [ {name: x86_64-pc-windows-gnu} ]
     steps:
       - uses: actions/checkout@master
-      - name: Compile and release
+      - name: Compile
+        id: compile
         uses: rust-build/rust-build.action@v1.4.5
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          TOOLCHAIN_VERSION: nightly
-          RUSTTARGET: ${{ matrix.target.name }}
-          STATIC_LINKING: true
-          EXTRA_FILES: "README.md LICENSE"
+          RUSTTARGET: x86_64-unknown-linux-musl
+          UPLOAD_MODE: none
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: Binary
+          path: |
+            ${{ steps.compile.outputs.BUILT_ARCHIVE }}
+            ${{ steps.compile.outputs.BUILT_CHECKSUM }}
